fix: keep tests compatible with Java 17